src/test/ui/macros/macro-stability.stderr
error[E0658]: use of unstable library feature 'local_unstable'
  --> $DIR/macro-stability.rs:10:5
   |
LL |     local_unstable!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(local_unstable)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_macros'
  --> $DIR/macro-stability.rs:11:5
   |
LL |     unstable_macro!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unstable_macros)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
